--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jan 28 01:12:18 2007  Tim Janik  <timj@gtk.org>
+
+	* web/file-upload.php: only allow .bse or .ogg file uploads.
+
 Thu Jan 25 00:05:52 2007  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/audio/Makefile.am:
