added a LADSPA todo item
svn path=/trunk/; revision=4262

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- unconditionally add /usr/lib/ladspa to search path
 - add SCM version info to report.out
 - fix block-dependence of bsenoise, i.e. non-noisy distributions
 - WEB: add? usability page: http://www.developerfusion.co.uk/show/1718/5/
