--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,3 +1,13 @@
+Thu Feb  1 20:27:09 2007  Tim Janik  <timj@gtk.org>
+
+	* birnetdebugtools.hh, birnetdebugtools.cc: added DebugChannel, a 
+	reference counted interface which allows sending of debug messages.
+	if a debug channel is created with new_from_file_async(), printing
+	a message happens in constant time in the calling thread, and the
+	debugging output is written into a file by a background thread.
+
+	* tests/threads.cc: added simply DebugChannel test.
+
 Mon Jan 29 23:29:27 2007  Tim Janik  <timj@gtk.org>
 
 	* examples/mkhost.sh: generate Makefile.decl with slowcheck: and perf:
