--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Sun Feb  4 03:24:30 2007  Tim Janik  <timj@gtk.org>
+
+	* updated all licenses to GNU Lesser General Public License version 2.1
+	with permission from Stefan Westerfeld where required.
+
 Fri Feb  2 00:20:58 2007  Tim Janik  <timj@gtk.org>
 
 	* sfiwrapper.h, sfiwrapper.cc: wrapped Birnet::DebugChannel with
