--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Feb  4 03:35:58 2007  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/: 
+	updated all licenses to GNU Lesser General Public License version 2.1.
+
 Sun Feb  4 01:58:20 2007  Tim Janik  <timj@gtk.org>
 
 	* Makefile.decl: provide SVN revision number in reports.
