--- a/drivers/bse-alsa/ChangeLog
+++ b/drivers/bse-alsa/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb  4 18:07:22 2007  Tim Janik  <timj@gtk.org>
+
+	* updated all licenses to GNU Lesser General Public License version 2.1.
+
 Wed Dec 27 22:51:58 2006  Tim Janik  <timj@gtk.org>
 
 	* released 0.7.1.
