Added the necessary API to find out the maximum engine block size to
Mon Feb  5 01:22:24 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* bsecxxmodule.*: Added the necessary API to find out the maximum
	engine block size to Bse::Effect. The new function is called
	Effect::max_block_size().

svn path=/trunk/; revision=4293

--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,7 +1,8 @@
 Mon Feb  5 01:22:24 2007  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsecxxmodule.*: Added the necessary API to find out the maximum
-	engine block size to Bse::Effect.
+	engine block size to Bse::Effect. The new function is called
+	Effect::max_block_size().
 
 Sun Feb  4 03:01:38 2007  Tim Janik  <timj@gtk.org>
 
