--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb  6 02:34:27 2007  Tim Janik  <timj@gtk.org>
+
+	* tools/bsewavetool.cc: added normalization command.
+
 Tue Feb  6 00:32:05 2007  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/audio/Makefile.am: Disabled freak-noise-test, simple-loop-test
