--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb  6 23:16:15 2007  Tim Janik  <timj@gtk.org>
+
+	* bseloader-wav.c (wav_read_fmt_header): fixed byte_per_sample check.
+
 Tue Feb  6 02:27:05 2007  Tim Janik  <timj@gtk.org>
 
 	* bse/gsldatahandle.[hc]: added scaling data handle, the scaling
