turned this into an illustration instrument for velocity controlled
Wed Feb  7 20:33:57 2007  Tim Janik  <timj@gtk.org>

        * library/instruments/illus-vtremolo.bse: turned this into an
        illustration instrument for velocity controlled tremolo.

svn path=/trunk/; revision=4306

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb  7 20:33:57 2007  Tim Janik  <timj@gtk.org>
+
+	* library/instruments/illus-vtremolo.bse: turned this into an
+	illustration instrument for velocity controlled tremolo.
+
 Wed Feb  7 20:31:26 2007  Tim Janik  <timj@gtk.org>
 
 	* library/instruments/illus-vtremolo.bse: moved test/simple-echo.bse
