--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- WEB: http://lwn.net/Articles/217873/ (tannenbaum reliable systems) -> usability page
 - unconditionally add /usr/lib/ladspa to search path
 - fix block-dependence of bsenoise, i.e. non-noisy distributions
 - in API and docs, s/roots/zeros/
