--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Feb  7 21:17:42 2007  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am, configure.in: removed test/.
+
 Wed Feb  7 21:14:39 2007  Tim Janik  <timj@gtk.org>
 
 	* library/demo/x2-midi-test.bse: fixed license to AS-IS.
