--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb 14 00:00:01 2007  Tim Janik  <timj@gtk.org>
+
+	* tools/bsefcompare.cc: slight precision increment for the last digit
+	of the final rating, to see fractions if we fail by the tenth of a promille.
+
 Tue Feb 13 22:48:04 2007  Tim Janik  <timj@gtk.org>
 
 	* tools/bsefcompare.cc: fixed output logic. never conditionalize
