--- a/birnet/ChangeLog
+++ b/birnet/ChangeLog
@@ -1,6 +1,6 @@
 Sun Feb  4 17:08:31 2007  Tim Janik  <timj@gtk.org>
 
-	* ChangeLog: updated .gitignore files.
+	* updated .gitignore files.
 
 Sun Feb  4 17:00:38 2007  Tim Janik  <timj@gtk.org>
 
