--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-11  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated English (British) translation
+
 Tue Nov 21 02:03:44 2006  Tim Janik  <timj@gtk.org>
 
 	* updated all po files to new source file set.
