--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Thu Mar 15 01:20:25 2007  Tim Janik  <timj@gtk.org>
+
+	* updated all po files from recent sources.
+
 2007-03-11  David Lodge <dave@cirt.net>
 
 	* en_GB.po: Updated English (British) translation
